Pridėtas cache'inimas, sumažintas užklausų skaičius. Sukurtas ThumbnailService specialiai thumbnail'ų cache'inimui. ThumbnailUtility perkeltas į bl, kartu su juo ir imgscalr dependency. Taip pat formatavimas.